--- a/topics-upload.html
+++ b/topics-upload.html
@@ -1,1 +1,250 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Topics Bulk Upload (Admin)</title>
 
+  <style>
+    body{
+      margin:0;
+      font-family: Arial, sans-serif;
+      background:#f3f6fb;
+      color:#111;
+    }
+    header{
+      background: linear-gradient(90deg, #0b2a6f, #2b74ff, #0b2a6f);
+      color:#fff;
+      padding:16px;
+      text-align:center;
+      font-size:20px;
+      font-weight:700;
+    }
+    .wrap{
+      max-width:900px;
+      margin:20px auto;
+      padding:16px;
+    }
+    .card{
+      background:#fff;
+      border-radius:14px;
+      padding:16px;
+      box-shadow:0 6px 18px rgba(0,0,0,0.08);
+      margin-bottom:16px;
+    }
+    .title{
+      font-size:22px;
+      font-weight:800;
+      margin-bottom:10px;
+    }
+    textarea{
+      width:100%;
+      min-height:320px;
+      padding:12px;
+      font-size:14px;
+      border-radius:10px;
+      border:1px solid #d0d7e2;
+      outline:none;
+      resize:vertical;
+      background:#fbfcff;
+      box-sizing:border-box;
+    }
+    .row{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top:12px;
+    }
+    button{
+      border:none;
+      padding:12px 16px;
+      border-radius:10px;
+      font-weight:700;
+      cursor:pointer;
+      transition:0.2s;
+    }
+    .btn-primary{
+      background:#0b2a6f;
+      color:#fff;
+    }
+    .btn-primary:hover{
+      background:#09245f;
+    }
+    .btn-secondary{
+      background:#111827;
+      color:#fff;
+    }
+    .btn-danger{
+      background:#b91c1c;
+      color:#fff;
+    }
+    .status{
+      margin-top:12px;
+      padding:12px;
+      border-radius:10px;
+      font-weight:700;
+      display:none;
+    }
+    .ok{
+      background:#dcfce7;
+      color:#166534;
+      display:block;
+    }
+    .err{
+      background:#fee2e2;
+      color:#991b1b;
+      display:block;
+    }
+    code{
+      background:#eef2ff;
+      padding:2px 6px;
+      border-radius:6px;
+      font-family: monospace;
+    }
+    .small{
+      font-size:13px;
+      color:#444;
+      line-height:1.5;
+    }
+  </style>
+</head>
+
+<body>
+  <header>Topics Bulk Upload (Admin)</header>
+
+  <div class="wrap">
+
+    <div class="card">
+      <div class="title">Instructions</div>
+      <div class="small">
+        1) Paste JSON array below<br/>
+        2) Click <b>Upload Topics to Firebase</b><br/>
+        3) It will add/update docs into Firestore collection: <code>topics</code><br/><br/>
+        <b>Format:</b><br/>
+        <code>
+          [{"subject":"GA","topic":"Percentages","overview":"...","subtopics":[]}]
+        </code><br/><br/>
+        ⚠️ <b>Important:</b> This uploader uses docId like <code>GA__Percentages</code>  
+        so it will <b>overwrite</b> same topic safely (no duplicates).
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="title">Paste Topics JSON</div>
+
+      <textarea id="jsonBox">[
+  {
+    "subject": "GA",
+    "topic": "Percentages",
+    "overview": "Learn percentage basics, conversions, increase/decrease, and quick calculations for GATE aptitude.",
+    "subtopics": []
+  },
+  {
+    "subject": "GA",
+    "topic": "Averages",
+    "overview": "Understand average concept, weighted average, and shortcut methods used in aptitude problems.",
+    "subtopics": []
+  }
+]</textarea>
+
+      <div class="row">
+        <button class="btn-primary" id="uploadBtn">Upload Topics to Firebase</button>
+        <button class="btn-secondary" onclick="goBack()">Back to App</button>
+        <button class="btn-danger" onclick="clearBox()">Clear Box</button>
+      </div>
+
+      <div id="statusBox" class="status"></div>
+    </div>
+
+  </div>
+
+  <!-- Firebase SDK -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
+    import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore.js";
+
+    // ✅ Your Firebase Config
+    const firebaseConfig = {
+      apiKey: "AIzaSyC_f6lvDO9LeSE22kv4HIhWLj846bmRla8",
+      authDomain: "gate-ec-mock.firebaseapp.com",
+      projectId: "gate-ec-mock",
+      storageBucket: "gate-ec-mock.firebasestorage.app",
+      messagingSenderId: "668980846025",
+      appId: "1:668980846025:web:a960f983f2e6311fad1c18"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    const jsonBox = document.getElementById("jsonBox");
+    const uploadBtn = document.getElementById("uploadBtn");
+    const statusBox = document.getElementById("statusBox");
+
+    function showStatus(msg, type="ok"){
+      statusBox.className = "status " + (type === "ok" ? "ok" : "err");
+      statusBox.innerText = msg;
+    }
+
+    function normalizeId(text){
+      return String(text || "")
+        .trim()
+        .replace(/\s+/g, "_")
+        .replace(/[^\w\-]/g, "");
+    }
+
+    uploadBtn.addEventListener("click", async () => {
+      try{
+        const raw = jsonBox.value.trim();
+        if(!raw) return showStatus("❌ Paste JSON first!", "err");
+
+        const topics = JSON.parse(raw);
+        if(!Array.isArray(topics)) return showStatus("❌ JSON must be an ARRAY []", "err");
+
+        let count = 0;
+
+        for(const t of topics){
+          if(!t.subject || !t.topic || !t.overview){
+            return showStatus("❌ Each item must have: subject, topic, overview", "err");
+          }
+
+          const subject = String(t.subject).trim();
+          const topic = String(t.topic).trim();
+          const overview = String(t.overview).trim();
+
+          // subtopics optional (we keep empty array)
+          const subtopics = Array.isArray(t.subtopics) ? t.subtopics : [];
+
+          // docId: SUBJECT__TOPIC (safe overwrite)
+          const docId = normalizeId(subject) + "__" + normalizeId(topic);
+
+          await setDoc(doc(db, "topics", docId), {
+            subject,
+            topic,
+            overview,
+            subtopics,
+            updatedAt: serverTimestamp()
+          }, { merge: true });
+
+          count++;
+        }
+
+        showStatus(`✅ Upload Success! Added/Updated ${count} topics in Firestore (topics collection)`, "ok");
+
+      }catch(err){
+        console.error(err);
+        showStatus("❌ Upload failed: " + err.message, "err");
+      }
+    });
+
+    // helpers for buttons
+    window.clearBox = () => {
+      jsonBox.value = "";
+      showStatus("🧹 Cleared JSON box.", "ok");
+    };
+
+    window.goBack = () => {
+      window.location.href = "./index.html";
+    };
+  </script>
+</body>
+</html>
