Refactor upload.html for clarity and functionality
Updated title and enhanced instructions for clarity. Added auto marks feature for questions without marks.

--- a/upload.html
+++ b/upload.html
@@ -3,138 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GA Bulk Upload (Admin)</title>
+  <title>Bulk Upload (Admin)</title>
 
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f5f7fb;
-    }
-
+    body { margin:0; font-family: Arial, sans-serif; background:#f5f7fb; }
     .topbar {
       background: linear-gradient(90deg, #062a62, #0b4ea2);
-      color: white;
-      padding: 18px;
-      text-align: center;
-      font-weight: bold;
-      font-size: 20px;
-      position: sticky;
-      top: 0;
-      z-index: 10;
+      color: white; padding: 18px; text-align: center;
+      font-weight: bold; font-size: 20px;
+      position: sticky; top: 0; z-index: 10;
     }
-
-    .container {
-      max-width: 900px;
-      margin: 20px auto;
-      padding: 16px;
-    }
-
+    .container { max-width: 900px; margin: 20px auto; padding: 16px; }
     .card {
-      background: white;
-      border-radius: 16px;
-      padding: 18px;
+      background: white; border-radius: 16px; padding: 18px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.08);
       margin-bottom: 16px;
     }
-
-    h2 {
-      margin: 0 0 12px;
-      font-size: 22px;
-    }
-
+    h2 { margin: 0 0 12px; font-size: 22px; }
     .instructions {
-      background: #eaf2ff;
-      border-left: 5px solid #0b4ea2;
-      padding: 14px;
-      border-radius: 12px;
-      font-size: 14px;
-      line-height: 1.6;
+      background: #eaf2ff; border-left: 5px solid #0b4ea2;
+      padding: 14px; border-radius: 12px;
+      font-size: 14px; line-height: 1.6;
     }
-
     textarea {
-      width: 100%;
-      min-height: 260px;
-      padding: 12px;
-      border-radius: 12px;
-      border: 1px solid #d6d6d6;
-      font-size: 14px;
-      outline: none;
-      resize: vertical;
+      width: 100%; min-height: 260px; padding: 12px;
+      border-radius: 12px; border: 1px solid #d6d6d6;
+      font-size: 14px; outline: none; resize: vertical;
       background: #fbfcff;
     }
-
-    .btn-row {
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-      margin-top: 12px;
-    }
-
+    .btn-row { display: flex; gap: 12px; flex-wrap: wrap; margin-top: 12px; }
     button {
-      border: none;
-      padding: 12px 18px;
-      border-radius: 12px;
-      font-size: 15px;
-      font-weight: bold;
-      cursor: pointer;
+      border: none; padding: 12px 18px; border-radius: 12px;
+      font-size: 15px; font-weight: bold; cursor: pointer;
       transition: 0.2s;
     }
+    .btn-primary { background: #0b4ea2; color: white; }
+    .btn-primary:hover { background: #083d81; }
+    .btn-dark { background: #0b1320; color: white; }
+    .btn-dark:hover { background: #000; }
+    .btn-danger { background: #b00020; color: white; }
+    .btn-danger:hover { background: #7d0016; }
 
-    .btn-primary {
-      background: #0b4ea2;
-      color: white;
-    }
-    .btn-primary:hover {
-      background: #083d81;
-    }
-
-    .btn-dark {
-      background: #0b1320;
-      color: white;
-    }
-    .btn-dark:hover {
-      background: #000;
-    }
-
-    .btn-danger {
-      background: #b00020;
-      color: white;
-    }
-    .btn-danger:hover {
-      background: #7d0016;
-    }
-
-    .status {
-      margin-top: 12px;
-      font-weight: bold;
-      font-size: 14px;
-    }
-
-    .ok {
-      color: #0a7a28;
-    }
-
-    .err {
-      color: #b00020;
-    }
-
-    .small {
-      font-size: 12px;
-      color: #555;
-      margin-top: 6px;
-    }
-
-    code {
-      background: #f1f1f1;
-      padding: 2px 6px;
-      border-radius: 6px;
-    }
+    .status { margin-top: 12px; font-weight: bold; font-size: 14px; }
+    .ok { color: #0a7a28; }
+    .err { color: #b00020; }
+    .small { font-size: 12px; color: #555; margin-top: 6px; }
+    code { background: #f1f1f1; padding: 2px 6px; border-radius: 6px; }
   </style>
 </head>
 
 <body>
-  <div class="topbar">GA Bulk Upload (Admin)</div>
+  <div class="topbar">Bulk Upload (Admin) – Auto Marks Enabled</div>
 
   <div class="container">
 
@@ -143,11 +62,16 @@
       <div class="instructions">
         1) Paste <b>JSON array</b> below<br/>
         2) Click <b>Upload to Firebase</b><br/>
-        3) It will add all docs into Firestore collection: <code>questions</code>
+        3) It will add docs into Firestore collection: <code>questions</code><br/><br/>
+        ✅ <b>Permanent Feature:</b> If <code>marks</code> is missing, it will auto add:
+        <ul>
+          <li><b>GA</b> → <b>1 mark</b></li>
+          <li><b>All other subjects</b> → <b>2 marks</b></li>
+        </ul>
         <div class="small">
           Format required:<br/>
           <code>
-            [{"subject":"GA","topic":"Percentages","question":"...","options":["A","B","C","D"],"answer":0}]
+            [{"subject":"GA","topic":"Averages","question":"...","options":["A","B","C","D"],"answer":0}]
           </code>
         </div>
       </div>
@@ -159,10 +83,10 @@
       <textarea id="jsonBox" placeholder='[
   {
     "subject": "GA",
-    "topic": "Percentages",
-    "question": "If 90% of x is 270, x is:",
-    "options": ["280", "300", "320", "340"],
-    "answer": 1
+    "topic": "Averages",
+    "question": "The average of 5 numbers is 18. If one number is removed, average becomes 16. Removed number is:",
+    "options": ["20","24","26","28"],
+    "answer": 2
   }
 ]'></textarea>
 
@@ -177,7 +101,6 @@
 
   </div>
 
-  <!-- Firebase Upload Script -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js";
     import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore.js";
@@ -200,9 +123,16 @@
     const clearBtn = document.getElementById("clearBtn");
     const statusEl = document.getElementById("status");
 
+    function autoMarks(subject){
+      const s = (subject || "").toUpperCase().trim();
+      if(s === "GA") return 1;
+      return 2;
+    }
+
     clearBtn.addEventListener("click", () => {
       jsonBox.value = "";
       statusEl.innerHTML = "";
+      statusEl.className = "status";
     });
 
     backBtn.addEventListener("click", () => {
@@ -215,7 +145,6 @@
 
       try {
         const text = jsonBox.value.trim();
-
         if (!text) {
           statusEl.className = "status err";
           statusEl.innerHTML = "❌ Please paste JSON first!";
@@ -239,27 +168,46 @@
         let added = 0;
         let skipped = 0;
 
-        for (const q of arr) {
+        for (let i = 0; i < arr.length; i++) {
+          const q = arr[i];
+
+          // Basic validation
           const isValid =
             q &&
             typeof q.subject === "string" &&
             typeof q.topic === "string" &&
             typeof q.question === "string" &&
             Array.isArray(q.options) &&
-            typeof q.answer === "number";
+            q.options.length === 4 &&
+            typeof q.answer === "number" &&
+            q.answer >= 0 && q.answer <= 3;
 
           if (!isValid) {
             skipped++;
             continue;
           }
 
-          // ✅ IMPORTANT: Auto-ID (no duplicate doc error)
+          // Clean strings
+          q.subject = q.subject.trim();
+          q.topic = q.topic.trim();
+          q.question = q.question.trim();
+
+          // ✅ Permanent auto marks
+          if (q.marks === undefined || q.marks === null) {
+            q.marks = autoMarks(q.subject);
+          }
+
+          // Upload
           await addDoc(collection(db, "questions"), q);
           added++;
+
+          statusEl.className = "status";
+          statusEl.innerHTML = `⏳ Uploading... (${added}/${arr.length})`;
         }
 
         statusEl.className = "status ok";
-        statusEl.innerHTML = `✅ Upload Success! Added ${added} questions to Firestore` +
+        statusEl.innerHTML =
+          `✅ Upload Success! Added ${added} questions` +
           (skipped > 0 ? ` | Skipped ${skipped} invalid items` : "");
 
       } catch (err) {
